--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,34 @@
 <% include ./partials/header %>
-<h1>Index Page</h1>
 
-<% blogs.forEach(function(blog){ %>
-    <div>
-        <h2><%= blog.title %></h2>
-        <img src="<%= blog.image %>" alt="blog image">
-        <h4><%= blog.body.substring(0, 100) %>...</h4>
-        <p><%= blog.created %></p>
-        <a class="ui inverted small brown button" href="/blogs/<%= blog._id %>">Read More..</a>
+<div class="ui main text container">
+    <div class="ui huge header">
+        <h1>Blog App</h1>
     </div>
-<% }) %>
+    <div class="ui top attached segment">
+        <div class="ui divided items">
+            <% blogs.forEach(function(blog){ %>
+            <div class="item">
+                <div class="image">
+                    <img src="<%= blog.image %>" alt="blog image">
+                </div>
+                <div class="content">
+                    <a class="header" href="/blogs/<%= blog._id %>"><%= blog.title %></a>
+                    <div class="meta">
+                        <span><%= blog.created.toDateString() %></span>
+                    </div>
+                    <div class="description">
+                        <p><%- blog.body.substring(0, 100) %>...</p>
+                    </div>
+                    <div class="extra">
+                        <a class="ui floated inverted small brown button" href="/blogs/<%= blog._id %>">Read More..
+                            <i class="right chevron icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <% }) %>
+        </div>
+    </div>
+</div>
 
 <% include ./partials/footer %>
