--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <body>
         <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><i class="code icon"></i> Site</div>
+                <div class="header item"><i class="code icon"></i>Blog Site</div>
                 <a href="/" class="item">Home</a>
                 <a href="/blogs/new" class="item">New Blog</a>
             </div>
